Fix narrow minimum hero spacing

--- a/docs/index-narrow.css
+++ b/docs/index-narrow.css
@@ -17,6 +17,7 @@
 
   .thirds-container.content > .third {
     width: 100%;
+    min-height: 21rem;
     text-align: center;
   }
 
